Update documentation